# Multi-Robots-Navigation-in-Stage-Ros

./: README.md  et --hard HEAD^
multi_robots_stage/: CMakeLists.txt  README.md  goal_organizer.py  multi_robot.rviz  package.xml  patrol_organizer.py
multi_robots_stage/launch/: circle.launch  move_base_fake_localization_10cm.launch
multi_robots_stage/move_base_config/: base_local_planner_params.yaml  costmap_common_params.yaml  costmap_common_params1.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  global_costmap_params1.yaml  local_costmap_params.yaml  local_costmap_params1.yaml  move_base_params.yaml
multi_robots_stage/stage_config/maps/: rink.pgm
multi_robots_stage/stage_config/worlds/: circle.world  willow-pr2-multi.world  willow-pr2.world
stage_ros_melodic/src/: stageros.cpp
stage_ros_modified/src/: stageros.cpp
